--- a/luminarpage.css
+++ b/luminarpage.css
@@ -13,12 +13,12 @@
 
 }
 .d1{
-   background-color:rgb(98, 12, 155) ;
+    background-color:rgb(98, 12, 155) ;
     height:40px;
 }
 .d2{
-   width: 100%;
-   background-color:rgb(98, 12, 155) ;
+   /* width: 100%; */
+    background-color:rgb(98, 12, 155) ;
  }
 .a1{
    text-decoration: none;
@@ -173,7 +173,11 @@ input {
       width: 100%;
       height: 200px;
    }
-
+   .md1{
+      width: 100%;
+      padding: 5px;
+   }
+   
    .hd1 {
       font-size: 15px;
       text-align: start;
@@ -254,6 +258,10 @@ input {
       background-color:rgb(98, 12, 155) ;
        height: 20px;
    }
+   .d2{
+      /* width: 100%; */
+       background-color:rgb(98, 12, 155) ;
+   
    }
 
 @media(max-width:390px) {
@@ -274,4 +282,5 @@ input {
       margin-bottom: 0px;
       text-align: justify;
    }
+}
 }
